--- a/views/domiciliation.xml
+++ b/views/domiciliation.xml
@@ -128,7 +128,7 @@
     <!-- This Menu Item will appear in the Upper bar, that's why It needs NO parent or action -->
     <menuitem id="manage_menu_root" name="manage" sequence="0" />
     <!-- This Menu Item must have a parent and an action -->
-    <menuitem id="manage_domiciliation_menu_act" name="Domiciliations" parent="manage_menu_root" action="manage_domiciliation_action" sequence="2" />
+    <menuitem id="manage_domiciliation_menu_act" name="Suivi de Domiciliations" parent="manage_menu_root" action="manage_domiciliation_action" sequence="2" />
   </data>
 
 
